coloring even rows in the table

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ETSII ULL Grado de Informatica 
 Asignatura Procesadores de Lenguajes
-Primera Práctica:
+Segunda Práctica:
 
-Conversor en JavaScript de grados Celisus a Farenheit y viceversa
+Comma Separated Values
